--- a/backend/package.json
+++ b/backend/package.json
@@ -6,12 +6,14 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
     "express-validator": "^7.0.1",
     "express-winston": "^4.2.0",
     "helmet": "^7.0.0",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.0",
+    "read-file-shebang": "^0.0.1",
     "validator": "^13.9.0",
     "winston": "^3.8.2"
   },
