--- a/backend/package.json
+++ b/backend/package.json
@@ -24,18 +24,18 @@
     "start": "node app.js",
     "dev": "nodemon app.js"
   },
-  "description": "**Проек #13",
+  "description": "",
   "main": "app.js",
-  "author": "NadezdaPL",
+  "author": "shaibot",
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com:NadezdaPL/express-mesto-gha.git"
+    "url": "git+ssh://git@github.com:shaibot/express-mesto-gha.git"
   },
   "bugs": {
-    "url": "https://github.com/NadezdaPL/express-mesto-gha/issues"
+    "url": "https://github.com/shaibot/express-mesto-gha/issues"
   },
-  "homepage": "https://nadezdapl.github.io/express-mesto-gha",
+  "homepage": "https://shaibot.github.io/express-mesto-gha",
   "devDependencies": {
     "eslint": "^8.38.0",
     "eslint-config-airbnb-base": "^15.0.0",
